@@ -1,15 +1,18 @@
-import tag, constraint, namedtype, univ
+import test_tag, test_constraint, test_namedtype, test_univ
 from pyasn1.error import PyAsn1Error
-try:
+from sys import version_info
+if version_info[0:2] < (2, 7) or \
+   version_info[0:2] in ( (3, 0), (3, 1) ):
+    try:
+        import unittest2 as unittest
+    except ImportError:
+        import unittest
+else:
     import unittest
-except ImportError:
-    raise PyAsn1Error(
-        'PyUnit package\'s missing. See http://pyunit.sourceforge.net/'
-        )
 
 suite = unittest.TestSuite()
 loader = unittest.TestLoader()
-for m in (tag, constraint, namedtype, univ):
+for m in (test_tag, test_constraint, test_namedtype, test_univ):
     suite.addTest(loader.loadTestsFromModule(m))
 
 def runTests(): unittest.TextTestRunner(verbosity=2).run(suite)
